# beefcake-swarm

./: .beads  .gitignore  .gitmodules  .mcp.json  .swarm-checkpoint.json  .swarm-mailbox-health.jsonl  .swarm-progress.txt  .swarm-session.jsonl  .swarm-workpad.jsonl  00_MASTER_ARCHITECTURE_PLAN.md  01_STATE_AND_ORCHESTRATION.md  02_WORKSPACE_ISOLATION.md  03_DYNAMIC_SKILLS.md  04_OBSERVABILITY_AND_TRACKING.md  AGENTS.md  CLAUDE.md  COCOINDEX_GRAPH_RAG.md  Cargo.toml  Dockerfile  GEMINI.md  HANDOFF.md  NOTEBOOKLM_INTEGRATION.md  README.md  _tmp_full_param_spec.py  _tmp_full_pipeline_fitness.py  audit-report.md  branch-analysis.txt  branch-log.txt  builder.py  categorize.py  config-diff-full.txt  config-diff-readable.md  count_tests.py  dist_tests.py  docker-compose.yml  experiments.tsv  exploration-notes.md  exploration-notes.txt  exploration-output.txt  final_fix.py  (+39 more)
.beads/: .gitignore  PRIME.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json  (+1 more)
coordination/: Cargo.toml
coordination/src/: agent_profile.rs  benchmark_tools.rs  fim.rs  lib.rs  main.rs  otel.rs  patch.rs  perf_control.rs  reformulation.rs  resilience.rs  reviewer_policy.rs  shell_safety.rs  speculation.rs  tool_bundle.rs  tool_schema.rs
coordination/src/analytics/: error.rs  mod.rs  replay.rs  skills.rs  verification.rs
coordination/src/benchmark/: harness.rs  manifest.rs  metrics.rs  mod.rs  problem.rs  slo.rs
coordination/src/context_packer/: ast_index.rs  file_walker.rs  mod.rs  packer.rs  probes.rs  repo_map.rs  semantic.rs  semantic_graph.rs  source_provider.rs
coordination/src/council/: mod.rs
coordination/src/debate/: consensus.rs  critique.rs  guardrails.rs  memory_bridge.rs  mod.rs  orchestrator.rs  persistence.rs  state.rs
coordination/src/ensemble/: arbitration.rs  context.rs  coordinator.rs  mod.rs  voting.rs
coordination/src/escalation/: auto_ticket.rs  delight.rs  engine.rs  friction.rs  heuristics.rs  mod.rs  state.rs  worker_first.rs
coordination/src/events/: bus.rs  history.rs  mod.rs  types.rs
coordination/src/feedback/: compiler.rs  correction_loop.rs  error_parser.rs  mod.rs
coordination/src/harness/: error.rs  feature_registry.rs  git_manager.rs  mod.rs  progress.rs  session.rs  startup.rs  test_utils.rs  tools.rs  types.rs
coordination/src/memory/: budget.rs  compactor.rs  errors.rs  mod.rs  observability.rs  store.rs  summarizer.rs
coordination/src/registry/: mod.rs
coordination/src/reviewer_tools/: ast_grep.rs  graph_rag.rs  mod.rs  rule_pack.rs
coordination/src/rollout/: feature_flags.rs  mod.rs
coordination/src/router/: canary.rs  circuit_breaker.rs  classifier.rs  mod.rs  prompts.rs  task_classifier.rs
coordination/src/slurm/: mod.rs
coordination/src/state/: mod.rs  schema.rs  store.rs  types.rs
coordination/src/verifier/: language_profile.rs  mod.rs  normalized.rs  pipeline.rs  report.rs  risk_profile.rs  safety_scan.rs
coordination/src/work_packet/: generator.rs  mod.rs  types.rs
coordination/tests/: compaction_property_tests.rs  cross_env_smoke_test.rs  debate_integration_test.rs  debate_transcript_fixtures.rs  escalation_integration_test.rs  harness_e2e.rs  harness_intervention_test.rs  harness_subsession_test.rs  policy_integration_test.rs  stuck_pattern_regression_test.rs  verifier_integration_test.rs
coordination/tests/common/: mod.rs
crates/swarm-agents/: Cargo.toml  RUST_PLAN.md
crates/swarm-agents/src/: acceptance.rs  action_validator.rs  analyzer.rs  auto_fix.rs  autopilot.rs  bdh_bridge.rs  beads_bridge.rs  cluster_health.rs  cognition.rs  confidence.rs  config.rs  context_firewall.rs  contracts.rs  dashboard.rs  driver.rs  embedding.rs  endpoint_pool.rs  experiment_db.rs  file_lock.rs  file_targeting.rs  fix_templates.rs  gepa_bridge.rs  git_ops.rs  grammars.rs  handoff.rs  harness.rs  harness_layers.rs  implementer.rs  jsonl.rs  judge.rs  kb_refresh.rs  knowledge_sync.rs  language_prompts.rs  lib.rs  main.rs  map_elites.rs  meta_reflection.rs  mutation_archive.rs  notebook_bridge.rs  orchestrator.rs  (+20 more)
crates/swarm-agents/src/agents/: adversary.rs  cloud.rs  coder.rs  manager.rs  mod.rs  reviewer.rs  specialists.rs
crates/swarm-agents/src/autopilot/: mod.rs  runner.rs
crates/swarm-agents/src/modes/: agentic.rs  apply_diff.rs  chat_history.rs  contextual.rs  deepthink.rs  errors.rs  memory.rs  mod.rs  provider_config.rs  runner.rs  types.rs
crates/swarm-agents/src/orchestrator/: dispatch.rs  helpers.rs  mod.rs  validation.rs
crates/swarm-agents/src/session/: events.rs  log.rs  mod.rs  recovery.rs
crates/swarm-agents/src/state_machine/: audit.rs  budget.rs  checkpoint.rs  mod.rs  tests.rs
crates/swarm-agents/src/telemetry/: aggregation.rs  events.rs  export.rs  init.rs  mod.rs  types.rs
crates/swarm-agents/src/tools/: apply_plan_tool.rs  astgrep_tool.rs  batch.rs  bdh_tools.rs  blast_radius_tool.rs  bundles.rs  cargo_metadata_tool.rs  colgrep_tool.rs  delegate_worker.rs  exec_tool.rs  file_exists_tool.rs  fs_tools.rs  git_tools.rs  graph_context_tool.rs  graph_context_tool_tests.rs  migration_matrix.rs  mod.rs  notebook_tool.rs  patch_tool.rs  plan_parallel_tool.rs  proxy_wrappers.rs  quick_check.rs  search_code_tool.rs  shared.rs  submit_plan_tool.rs  tz_mcp_tool.rs  verifier_tool.rs  workpad_tool.rs
crates/swarm-agents/src/tools/patch_tool/: fabrication.rs  formatting.rs  mod.rs  omission.rs
crates/swarm-agents/tests/: agent_inference_tests.rs  e2e_swarm_slice_test.rs  manager_delegation_test.rs  modes_integration_tests.rs  orchestration_smoke_test.rs  orchestrator_refactor_test.rs  tool_schema_tests.rs  tool_tests.rs  verifier_tool_test.rs
python/: architect.py  dogfood.py  pyproject.toml  run.py  spike_runner.py  swarm_worker.py
python/rspl/: __init__.py  bootstrap.py  registry.py  types.py
python/sepl/: __init__.py  feedback.py  lineage.py  operators.py  state.py  tool_synth.py  types.py
python/tests/: conftest.py  test_architect_sepl.py  test_feedback.py  test_rspl.py  test_sepl_operators.py  test_tool_synth.py
(+856 files in other folders)
