[package]
name = "coordination"
version = "0.1.0"
edition = "2021"
description = "Deterministic quality gates, escalation state machine, ensemble voting for autonomous coding swarm"

[dependencies]
rmcp = { version = "0.13", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Harness dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# Benchmark/feedback loop dependencies
regex = "1"

# Ensemble coordination dependencies
rocksdb = "0.24"
bincode = "1.3"

# Council and SLURM integration dependencies
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
