[package]
name = "coordination"
version = "0.1.0"
edition = "2021"
description = "Deterministic quality gates, escalation state machine, ensemble voting for autonomous coding swarm"

[dependencies]
rmcp = { version = "0.13", features = ["server", "transport-io"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1"

# Harness dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# Benchmark/feedback loop dependencies
regex = "1"
ignore = "0.4"

# AST-aware context packing (multi-language)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"

# Ensemble coordination dependencies (optional, behind heavy-state feature)
rocksdb = { version = "0.24", optional = true }
bincode = { version = "1.3", optional = true }

# Council and SLURM integration dependencies
async-trait = "0.1"
futures = "0.3"
serde_yaml = "0.9.34"
toml = "0.8"

[[bin]]
name = "coordination"
path = "src/main.rs"
required-features = ["heavy-state"]

[features]
default = []
# Include all coordination modules (council, slurm, debate, etc.)
# The MCP binary requires heavy-state which implies full.
full = []
heavy-state = ["full", "rocksdb", "bincode"]

[dev-dependencies]
tempfile = "3"
