[project]
name = "beefcake-python-worker"
version = "0.1.0"
description = "mini-SWE-agent based Python worker for beefcake-swarm (Phase 1 spike)"
requires-python = ">=3.11"
dependencies = [
    "mini-swe-agent>=2.2.0",
    "litellm>=1.52,<2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "requests>=2.31",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
