[package]
name = "swarm-agents"
version.workspace = true
edition.workspace = true
description = "Rig-based agent orchestrator for autonomous coding swarm"

[lib]
name = "swarm_agents"
path = "src/lib.rs"

[[bin]]
name = "swarm-agents"
path = "src/main.rs"

[dependencies]
rig-core = "0.30"
coordination = { path = "../../coordination" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
schemars = "0.8"
toml = "0.8"
shlex = "1.3.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
